--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
     "sweetalert2": "^11.7.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-axios": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
