--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sweetalert2": "^11.7.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
+    "vue-clickaway": "^2.2.2",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
