--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "sweetalert2": "^11.7.3",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "^2.2.2",
+    "vue-moment": "^4.1.0",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
