--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "core-js": "^3.8.3",
     "moment": "^2.29.4",
     "sweetalert2": "^11.7.3",
+    "uuid": "^9.0.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-clickaway": "^2.2.2",
     "vue-moment": "^4.1.0",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-session": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
